kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: pennys-site
  namespace: shared-services
spec:
  rules:
  - host: dogs.web.craigcloud.io
    http:
      paths:
      - backend:
          service:
            name: pennys-site
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
